<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Textbook Trading</string>
    <string name="phone_number">Your phone number</string>
    <string name="campus">Your school/college</string>
    <string name="change">Change&#8230;</string>
    <string name="can_buyer_call_you">Call me</string>
    <string name="can_buyer_text_you">Send me a text message</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="your_account">Your account</string>
    <string name="what_do_you_want_to_do_next">What do you want to do next?</string>
    <string name="please_select_your_college">Please select your college</string>
    <string name="quit">Quit</string>
    <string name="delete">Delete</string>

	<string name="sell_a_textbook">Sell a textbook</string>
    <string name="search">Search</string>
    <string name="scan_isbn">Scan ISBN</string>
    <string name="title">Title</string>
	<string name="author">Author(s)</string>
	<string name="edition">Edition</string>
	<string name="publisher">Publisher(s)</string>
	<string name="take_a_picture">Take a picture..</string>
	<string name="select_from_gallery">Select from Gallery..</string>
	<string name="how_much_do_you_want_to_sell">Price (USD)?</string>
	<string name="what_are_the_publisher">What are the publishers\' names?</string>
	<string name="what_is_the_publisher_name">What is the publisher\'s name?</string>
	<string name="who_are_the_authors">Who are the authors?</string>
	<string name="what_is_the_title">What is the title?</string>
	<string name="additional_information">Additional information</string>
	<string name="enter_keyword_or_isbn_to_search">Enter keywords or ISBN</string>
	<string name="what_is_the_isbn">What is the ISBN?</string>
	<string name="search_for_textbooks">Search for textbooks</string>
	<string name="please_wait">Please wait&#8230;</string>
	<string name="no_textbooks_found_with_scanned_barcode">No textbooks found with scanned barcode!</string>
	<string name="textbook_found">Textbook found.</string>
	<string name="your_textbook_has_been_listed_successfully">Your textbook has been listed successfully</string>
	<string name="unknown_error_occur">Sorry! Unknown error occurred. Please try again later.</string>
	<string name="saving_your_textbook">Saving your textbook</string>
	<string name="title_is_missing">What is the title of the textbook?</string>
	<string name="isbn_is_missing">What is the ISBN of the textbook?</string>
	<string name="authors_is_missing">Who are the authors of the textbook?</string>
	<string name="picture_is_missing">You need to take a picture of the textbook!</string>
	<string name="price_is_missing">How much do you want to sell the textbook in USD? Enter 0 if you are giving it away.</string>
	<string name="textbook_picture">Textbook picture</string>
	<string name="my_selling_textbooks">My Selling Textbooks</string>
	<string name="getting_your_selling_textbooks">Getting selling textbooks</string>
	<string name="getting_textbook_information">Getting textbook information</string>
	<string name="error">Error</string>
	<string name="isbn_lookup_error">There are no textbooks found. Please your network connection and try again.</string>
	<string name="ok">OK</string>
	<string name="searching_for_textbooks">Searching for textbooks&#8230;</string>
	<string name="there_is_no_textbooks_found">There is no textbooks found. Please check your search term and try again.</string>
	<string name="getting_account_information">Getting account information</string>
	<string name="getting_college_information">Getting college information</string>
	<string name="getting_college_logo">Getting college logo</string>
	<string name="select_your_college">Select your college</string>
	<string name="if_you_are_selling_textbooks">How do others contact you? </string>
	<string name="saving_your_account">Saving your account</string>
	<string name="deleting_your_textbook">Deleting your textbook</string>
	<string name="your_textbook_has_been_deleted">Your textbook has been deleted</string>
	<string name="delete_your_textbook">Delete your textbook</string>
	<string name="are_you_sure_you_want_delete_this_textbook">Deleting a textbook is irreversible. Are you sure you want to remove this textbook?</string>
	<string name="yes">Yes</string>
	<string name="input_error">Input error!</string>
	<string name="you_must_have_one_contact_method">You must indicate one contact method (Call or Text)</string>
	<string name="operation_failed">Operation failed!</string>
	<string name="malformed_response">Request failed. Please check your connection and try again later!</string>
	<string name="your_account_has_been_saved">Your account has been saved.</string>
	<string name="refresh">Refresh</string>
	<string name="clear">Clear</string>
	<string name="keywords">keywords</string>
	<string name="back">Back</string>
	<string name="account_initialization_failed">Account initialization failed! Please check your connection and try again later.</string>
	<string name="initializing">Initializing</string>
	<string name="your_search_term_is_empty">Your search term is empty</string>
	<string name="welcome_message">Welcome to Textbook Trading!</string>
	<string name="search_for_textbooks_to_buy">Search for textbooks to buy</string>
	<string name="view_my_favorite_items">View my favorite items</string>
	<string name="buy_textbooks">Buy textbooks</string>
	<string name="sell_my_textbooks">Sell my textbooks</string>
	<string name="view_my_selling_items">View my selling items</string>
	<string name="other">Other</string>
	<string name="update_my_account_information">Update my account information</string>
	<string name="change_your_school_or_college">Change your school or college</string>
	<string name="tired_of_typing">Tired of typing?</string>
	<string name="enter_textbook_information">Enter textbook information</string>
	<string name="call_the_seller">Call the seller</string>
	<string name="text_the_seller">Text the seller</string>
	<string name="view_a_selling_textbook">View a selling textbook</string>
	<string name="unable_to_load_the_selected_picture">Unable to load the selected picture. Please choose a different one.</string>
	<string name="you_must_indicate_your_school_or_college">You must indicate your school or college</string>
	<string name="getting_your_favorite_textbooks">Getting your favorite textbooks</string>
	<string name="updating_favorite_items">Updating favorite items</string>
	<string name="this_application_requires_a_valid_phone_number_to_run">This application requires a valid phone number to run. Sorry for any inconvenience.</string>
	<string name="your_device_does_not_meet_minimum_requirement">Unsatisfied configuration</string>
</resources>