<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tired_of_typing"
                android:layout_marginBottom="8dip"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <Button
                    android:id="@+id/seachButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search"
                    android:width="100dip" />

                <Button
                    android:id="@+id/scanISBNButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_isbn"
                    android:width="100dip" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_textbook_information"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="10dip"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/titleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/what_is_the_title" >

            </EditText>

            <EditText
                android:id="@+id/authorsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/who_are_the_authors" />

            <EditText
                android:id="@+id/isbnEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/what_is_the_isbn" />

            <EditText
                android:id="@+id/publishersEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/what_are_the_publisher" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textbook_picture"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dip"
                android:layout_marginTop="4dip" >

                <ImageView
                    android:id="@+id/pictureImageView"
                    android:layout_width="128dip"
                    android:layout_height="128dip"
                    android:layout_marginRight="10dip"
                    android:contentDescription="@string/textbook_picture"
                    android:src="@drawable/no_image"
                     />

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/selectFromGalleryButton"
                        android:layout_width="160dip"
                        android:layout_height="wrap_content"
                        android:text="@string/select_from_gallery" />

                    <Button
                        android:id="@+id/takeAPictureButton"
                        android:layout_width="160dip"
                        android:layout_height="wrap_content"
                        android:text="@string/take_a_picture" />
                </LinearLayout>
            </LinearLayout>

            <EditText
                android:id="@+id/priceEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/how_much_do_you_want_to_sell"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/additionalInformationEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/additional_information"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:id="@+id/LinearLayout01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:textStyle="bold"
                    android:width="100dip" />
                
                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:textColor="#FF0000"
                    android:width="100dip" />

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:width="100dip" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>