<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/welcome_message"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/what_do_you_want_to_do_next"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/buy_textbooks"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/searchForTextbooksToBuyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="4dp"
                android:text="@string/search_for_textbooks_to_buy" />

            <Button
                android:id="@+id/viewMyFavoriteItemsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="4dp"
                android:text="@string/view_my_favorite_items" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/sell_my_textbooks"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/sellATextbookButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="4dp"
                android:text="@string/sell_a_textbook" />

            <Button
                android:id="@+id/viewMySellingItemsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="4dp"
                android:text="@string/view_my_selling_items" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/other"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/updateMyAccountInformationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="4dp"
                android:text="@string/update_my_account_information" />

            <Button
                android:id="@+id/quitButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="4dp"
                android:text="@string/quit" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>