<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="2dp" >

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:hint="@string/keywords" >
    </EditText>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="70dip"
        android:layout_height="wrap_content"
        android:text="@string/search" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="70dip"
        android:layout_height="wrap_content"
        android:text="@string/clear" />

</LinearLayout>