<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="4dip" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dip"
                android:text="@string/campus"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/collegeLogoImageView"
                    android:layout_width="100dip"
                    android:layout_height="100dip"
                    android:layout_marginRight="10dip"
                    android:src="@drawable/no_image" />

                <TextView
                    android:id="@+id/collegeNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="4dip"
                    android:text="@string/select_your_college" />
            </LinearLayout>

            <Button
                android:id="@+id/changeCollegeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dip"
                android:text="@string/change_your_school_or_college" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dip"
                android:layout_marginTop="12dip"
                android:text="@string/if_you_are_selling_textbooks"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <CheckBox
                android:id="@+id/callableCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/can_buyer_call_you" />

            <CheckBox
                android:id="@+id/textableCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/can_buyer_text_you" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:gravity="center" >

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="96dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/save"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="96dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/cancel" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>